--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -1,203 +1,110 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "source": [
-    "import pandas as pd"
+    "# Import\r\n",
+    "\r\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "source": [
+    "import pandas as pd\r\n",
+    "from sklearn.tree import DecisionTreeRegressor\r\n",
+    "from sklearn.metrics import mean_absolute_error\r\n",
+    "from sklearn.model_selection import train_test_split"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "source": [
-    "df = pd.read_csv('FB.csv')\r\n",
-    "df.describe()"
+    "# Data wrangling"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "source": [
+    "df = pd.read_csv('melb_data.csv')\r\n",
+    "df.dropna(axis=0)\r\n",
+    "df.columns"
    ],
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "            Date        Open        High         Low       Close   Adj Close  \\\n",
-       "0     2012-05-18   42.049999   45.000000   38.000000   38.230000   38.230000   \n",
-       "1     2012-05-21   36.529999   36.660000   33.000000   34.029999   34.029999   \n",
-       "2     2012-05-22   32.610001   33.590000   30.940001   31.000000   31.000000   \n",
-       "3     2012-05-23   31.370001   32.500000   31.360001   32.000000   32.000000   \n",
-       "4     2012-05-24   32.950001   33.209999   31.770000   33.029999   33.029999   \n",
-       "...          ...         ...         ...         ...         ...         ...   \n",
-       "2315  2021-08-02  358.100006  359.399994  350.739990  351.950012  351.950012   \n",
-       "2316  2021-08-03  352.730011  353.769989  347.700012  351.239990  351.239990   \n",
-       "2317  2021-08-04  352.420013  360.480011  351.510010  358.920013  358.920013   \n",
-       "2318  2021-08-05  359.640015  363.899994  356.899994  362.970001  362.970001   \n",
-       "2319  2021-08-06  361.399994  365.149994  361.399994  363.510010  363.510010   \n",
-       "\n",
-       "         Volume  \n",
-       "0     573576400  \n",
-       "1     168192700  \n",
-       "2     101786600  \n",
-       "3      73600000  \n",
-       "4      50237200  \n",
-       "...         ...  \n",
-       "2315   13180400  \n",
-       "2316   12393000  \n",
-       "2317   14180600  \n",
-       "2318   10247200  \n",
-       "2319    8918100  \n",
-       "\n",
-       "[2320 rows x 7 columns]"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Open</th>\n",
-       "      <th>High</th>\n",
-       "      <th>Low</th>\n",
-       "      <th>Close</th>\n",
-       "      <th>Adj Close</th>\n",
-       "      <th>Volume</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2012-05-18</td>\n",
-       "      <td>42.049999</td>\n",
-       "      <td>45.000000</td>\n",
-       "      <td>38.000000</td>\n",
-       "      <td>38.230000</td>\n",
-       "      <td>38.230000</td>\n",
-       "      <td>573576400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2012-05-21</td>\n",
-       "      <td>36.529999</td>\n",
-       "      <td>36.660000</td>\n",
-       "      <td>33.000000</td>\n",
-       "      <td>34.029999</td>\n",
-       "      <td>34.029999</td>\n",
-       "      <td>168192700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2012-05-22</td>\n",
-       "      <td>32.610001</td>\n",
-       "      <td>33.590000</td>\n",
-       "      <td>30.940001</td>\n",
-       "      <td>31.000000</td>\n",
-       "      <td>31.000000</td>\n",
-       "      <td>101786600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2012-05-23</td>\n",
-       "      <td>31.370001</td>\n",
-       "      <td>32.500000</td>\n",
-       "      <td>31.360001</td>\n",
-       "      <td>32.000000</td>\n",
-       "      <td>32.000000</td>\n",
-       "      <td>73600000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2012-05-24</td>\n",
-       "      <td>32.950001</td>\n",
-       "      <td>33.209999</td>\n",
-       "      <td>31.770000</td>\n",
-       "      <td>33.029999</td>\n",
-       "      <td>33.029999</td>\n",
-       "      <td>50237200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2315</th>\n",
-       "      <td>2021-08-02</td>\n",
-       "      <td>358.100006</td>\n",
-       "      <td>359.399994</td>\n",
-       "      <td>350.739990</td>\n",
-       "      <td>351.950012</td>\n",
-       "      <td>351.950012</td>\n",
-       "      <td>13180400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2316</th>\n",
-       "      <td>2021-08-03</td>\n",
-       "      <td>352.730011</td>\n",
-       "      <td>353.769989</td>\n",
-       "      <td>347.700012</td>\n",
-       "      <td>351.239990</td>\n",
-       "      <td>351.239990</td>\n",
-       "      <td>12393000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2317</th>\n",
-       "      <td>2021-08-04</td>\n",
-       "      <td>352.420013</td>\n",
-       "      <td>360.480011</td>\n",
-       "      <td>351.510010</td>\n",
-       "      <td>358.920013</td>\n",
-       "      <td>358.920013</td>\n",
-       "      <td>14180600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2318</th>\n",
-       "      <td>2021-08-05</td>\n",
-       "      <td>359.640015</td>\n",
-       "      <td>363.899994</td>\n",
-       "      <td>356.899994</td>\n",
-       "      <td>362.970001</td>\n",
-       "      <td>362.970001</td>\n",
-       "      <td>10247200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2319</th>\n",
-       "      <td>2021-08-06</td>\n",
-       "      <td>361.399994</td>\n",
-       "      <td>365.149994</td>\n",
-       "      <td>361.399994</td>\n",
-       "      <td>363.510010</td>\n",
-       "      <td>363.510010</td>\n",
-       "      <td>8918100</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2320 rows × 7 columns</p>\n",
-       "</div>"
+       "Index(['Suburb', 'Address', 'Rooms', 'Type', 'Price', 'Method', 'SellerG',\n",
+       "       'Date', 'Distance', 'Postcode', 'Bedroom2', 'Bathroom', 'Car',\n",
+       "       'Landsize', 'BuildingArea', 'YearBuilt', 'CouncilArea', 'Lattitude',\n",
+       "       'Longtitude', 'Regionname', 'Propertycount'],\n",
+       "      dtype='object')"
       ]
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 59
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Features Engineering"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "source": [
+    "y = df.Price\r\n",
+    "features__columns = ['Rooms', 'Bathroom', 'Landsize', 'Lattitude', 'Longtitude']\r\n",
+    "X = df[features__columns]"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Fitting Model"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "source": [
+    "model = DecisionTreeRegressor()\r\n",
+    "train_X, val_X, train_y, val_y = train_test_split(X, y, random_state = 0)\r\n",
+    "model.fit(train_X, train_y)\r\n",
+    "\r\n",
+    "val_predictions = model.predict(val_X)\r\n",
+    "print(mean_absolute_error(val_y, val_predictions))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "249786.21099656358\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
    "metadata": {}
   }
  ],
