fixed some issues

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "source": [
     "import pandas as pd\r\n",
     "from sklearn.tree import DecisionTreeRegressor\r\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "source": [
     "df = pd.read_csv('melb_data.csv')\r\n",
     "df.dropna(axis=0)\r\n",
@@ -37,18 +37,12 @@
    ],
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "Index(['Suburb', 'Address', 'Rooms', 'Type', 'Price', 'Method', 'SellerG',\n",
-       "       'Date', 'Distance', 'Postcode', 'Bedroom2', 'Bathroom', 'Car',\n",
-       "       'Landsize', 'BuildingArea', 'YearBuilt', 'CouncilArea', 'Lattitude',\n",
-       "       'Longtitude', 'Regionname', 'Propertycount'],\n",
-       "      dtype='object')"
-      ]
+      "text/plain": "Index(['Suburb', 'Address', 'Rooms', 'Type', 'Price', 'Method', 'SellerG',\n       'Date', 'Distance', 'Postcode', 'Bedroom2', 'Bathroom', 'Car',\n       'Landsize', 'BuildingArea', 'YearBuilt', 'CouncilArea', 'Lattitude',\n       'Longtitude', 'Regionname', 'Propertycount'],\n      dtype='object')"
      },
+     "execution_count": 2,
      "metadata": {},
-     "execution_count": 59
+     "output_type": "execute_result"
     }
    ],
    "metadata": {}
@@ -62,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "source": [
     "y = df.Price\r\n",
     "features__columns = ['Rooms', 'Bathroom', 'Landsize', 'Lattitude', 'Longtitude']\r\n",
@@ -80,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "source": [
     "model = DecisionTreeRegressor()\r\n",
     "train_X, val_X, train_y, val_y = train_test_split(X, y, random_state = 0)\r\n",
@@ -94,17 +88,10 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "249786.21099656358\n"
+      "245881.3364752086\n"
      ]
     }
    ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {}
   }
  ],
@@ -123,8 +110,9 @@
    "file_extension": ".py"
   },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.8 64-bit ('base': conda)"
+   "name": "pycharm-77c28e05",
+   "language": "python",
+   "display_name": "PyCharm (FB-Stock-DA)"
   },
   "interpreter": {
    "hash": "efdfd2686e573dddf0c043741fac81f80551d77a937eef365896f7d2a67fdf2d"
