cleared cell outputs

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -37,12 +37,18 @@
    ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": "Index(['Suburb', 'Address', 'Rooms', 'Type', 'Price', 'Method', 'SellerG',\n       'Date', 'Distance', 'Postcode', 'Bedroom2', 'Bathroom', 'Car',\n       'Landsize', 'BuildingArea', 'YearBuilt', 'CouncilArea', 'Lattitude',\n       'Longtitude', 'Regionname', 'Propertycount'],\n      dtype='object')"
+      "text/plain": [
+       "Index(['Suburb', 'Address', 'Rooms', 'Type', 'Price', 'Method', 'SellerG',\n",
+       "       'Date', 'Distance', 'Postcode', 'Bedroom2', 'Bathroom', 'Car',\n",
+       "       'Landsize', 'BuildingArea', 'YearBuilt', 'CouncilArea', 'Lattitude',\n",
+       "       'Longtitude', 'Regionname', 'Propertycount'],\n",
+       "      dtype='object')"
+      ]
      },
-     "execution_count": 2,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 2
     }
    ],
    "metadata": {}
@@ -56,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "source": [
     "y = df.Price\r\n",
     "features__columns = ['Rooms', 'Bathroom', 'Landsize', 'Lattitude', 'Longtitude']\r\n",
@@ -74,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "source": [
     "model = DecisionTreeRegressor()\r\n",
     "train_X, val_X, train_y, val_y = train_test_split(X, y, random_state = 0)\r\n",
@@ -88,7 +94,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "245881.3364752086\n"
+      "246263.5494354443\n"
      ]
     }
    ],
@@ -110,9 +116,8 @@
    "file_extension": ".py"
   },
   "kernelspec": {
-   "name": "pycharm-77c28e05",
-   "language": "python",
-   "display_name": "PyCharm (FB-Stock-DA)"
+   "name": "python3",
+   "display_name": "Python 3.8.8 64-bit ('base': conda)"
   },
   "interpreter": {
    "hash": "efdfd2686e573dddf0c043741fac81f80551d77a937eef365896f7d2a67fdf2d"
