--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "source": [
     "import pandas as pd\r\n",
     "from sklearn.tree import DecisionTreeRegressor\r\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "source": [
     "df = pd.read_csv('melb_data.csv')\r\n",
     "df.dropna(axis=0)\r\n",
@@ -48,7 +48,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 21
     }
    ],
    "metadata": {}
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "source": [
     "y = df.Price\r\n",
     "features__columns = ['Rooms', 'Bathroom', 'Landsize', 'Lattitude', 'Longtitude']\r\n",
@@ -80,21 +80,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "source": [
-    "model = DecisionTreeRegressor()\r\n",
-    "train_X, val_X, train_y, val_y = train_test_split(X, y, random_state = 0)\r\n",
-    "model.fit(train_X, train_y)\r\n",
-    "\r\n",
-    "val_predictions = model.predict(val_X)\r\n",
-    "print(mean_absolute_error(val_y, val_predictions))"
+    "def get_mae(max_leaf_nodes, train_X, val_X, train_y, val_y):\r\n",
+    "    model = DecisionTreeRegressor(max_leaf_nodes=max_leaf_nodes, random_state=0)\r\n",
+    "    train_X, val_X, train_y, val_y = train_test_split(X, y, random_state = 0)\r\n",
+    "    model.fit(train_X, train_y)\r\n",
+    "    val_predictions = model.predict(val_X)\r\n",
+    "    return mean_absolute_error(val_y, val_predictions)\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "source": [
+    "max_leaf_nodes = [5, 25, 100, 500, 5000]\r\n",
+    "scores = {i:get_mae(i, train_X, val_X, train_y, val_y) for i in max_leaf_nodes}\r\n",
+    "best_tree_size = min(scores, key=scores.get)\r\n",
+    "best_tree_size"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "500"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 25
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "source": [
+    "final_model = DecisionTreeRegressor(max_leaf_nodes=best_tree_size, random_state=1)\r\n",
+    "final_model.fit(train_X, train_y)\r\n",
+    "print(\"Training completed...!\")"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "246263.5494354443\n"
+      "Training completed...!\n"
      ]
     }
    ],
